2010-06-19  Robert Larice
 * ng-spice-rework/src/xspice/Makefile.am:
	exclude some junk from `make dist'
	  `make dist' and `make ; make dist'
	should yield the same tar-ball know
 * ng-spice-rework/src/xspice/cmpp/Makefile.am:
	fix missing dependencies to compute ifs_yacc.h and mod_yacc.h
	to avoid ylwrap, and because bison is neccessairy somewhere else anyway,
	  switched from $(YACC) to $(BISON)

2010-06-17 Holger Vogt
 * inpcom.c: in inp_fix_gnd_name() remove excessive white spaces 
   around 0 after replacing "gnd" by " 0 "

2010-06-16 Holger Vogt
 * src/Makefile.am: for WINDOWS all of help files and
   related files excluded

2010-06-14  Robert Larice
 * Makefile.am:
	exclude libtool from `make dist', revert its recent inclusion
 * src/xspice/Makefile.am:
	exclude the compiled codemodels from `make dist'
 * src/xspice/cmpp/Makefile.am:
	eliminate an automake warning

2010-06-13  Robert Larice
 * Makefile.am, src/Makefile.am:
	add `libtool' to `make dist'
	add `src/spice.def' to `make dist'
	remove `src/ngspice.idx' from `make dist'
	  it will be created new from `src/ngspice.txt' anyway

2010-06-13  Robert Larice
 * src/ciderlib/support/Makefile.am:
	add `readme' to `make dist'
 * src/spicelib/devices/bsim3/Makefile.am,
 * src/spicelib/devices/bsim3soi/Makefile.am,
 * src/spicelib/devices/bsim3soi_dd/Makefile.am,
 * src/spicelib/devices/bsim3soi_fd/Makefile.am,
 * src/spicelib/devices/bsim3soi_pd/Makefile.am,
 * src/spicelib/devices/bsim3v32/Makefile.am,
 * src/spicelib/devices/bsim4/Makefile.am,
 * src/spicelib/devices/bsim4v2/Makefile.am,
 * src/spicelib/devices/bsim4v3/Makefile.am,
 * src/spicelib/devices/bsim4v4/Makefile.am,
 * src/spicelib/devices/bsim4v5/Makefile.am:
	add some license files to `make dist'
 * tests/general/Makefile.am:
	add two tests, diffpair.cir and fourbitadder.cir, to `make dist'

2010-06-13  Robert Larice
 * Makefile.am, configure.in, manual/Makefile.am:
   make dist, shall compile manual.pdf from the lyx manual